Fixes #968. + was aligned a little high on buttons that had the add class

--- a/system/cms/themes/pyrocms/css/workless.css
+++ b/system/cms/themes/pyrocms/css/workless.css
@@ -1425,7 +1425,7 @@ Primary styles. (Mobile first, everything else is overridden with @media queries
 #shortcuts ul li a.add {
 	margin-top: -4px;
 	float: left;
-	padding: 0 10px 2px 7px!important;
+	padding: 2px 10px 2px 7px!important;
 }
 
 #shortcuts ul li a.add:before {
@@ -1434,6 +1434,7 @@ Primary styles. (Mobile first, everything else is overridden with @media queries
   font-size: 16px;
   font-weight: bold;
   text-shadow: 0 1px 0 #ffffff;
+  vertical-align: middle;
 }
 
 #shortcuts li a {
